pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: imexerp-prd
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector: 
    app: pgadmin
