pgadmin/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: imexerp-prd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /pgadmin4;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /pgadmin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
